# py-tic-tac-toe

./: engine.py  pyproject.toml
src/tic_tac_toe/: __init__.py
src/tic_tac_toe/game/: engine.py  players.py  renderers.py
src/tic_tac_toe/logic/: models.py  validators.py
src/tic_tac_toe/models/: game_state.py  grid.py  mark.py  move.py
src/ui/console/: __init__.py  args.py  players.py  renderers.py
