[project]
name = "tic-tac-toe"
version = "0.1.0"
description = "A simple tic-tac-toe game written in Python"
authors = [{ name = "mancuoj", email = "mancuoj@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tic_tac_toe"]
